pタグを追加

--- a/othello.html
+++ b/othello.html
@@ -34,6 +34,7 @@
     <title>オセロ</title>
 </head>
 <body>
+    <p>黒が先行です</p>
     <div id="board"></div>
     <script src="othello.js"></script>
 </body>
